--- a/composer.json
+++ b/composer.json
@@ -22,9 +22,9 @@
     }
   ],
   "require": {
-    "php": ">=5.6.0",
+    "php": ">=7.4",
     "yiisoft/yii2": ">=2.0.6",
-    "yiisoft/yii2-bootstrap": ">=2.0.5"
+    "yiisoft/yii2-bootstrap5": ">=2.0.4"
   },
   "require-dev": {
     "phpunit/phpunit": "5.1.*"
